:sparkles: add ecs execution role

--- a/ecs-service/ecs-service.yaml
+++ b/ecs-service/ecs-service.yaml
@@ -27,6 +27,22 @@ Resources:
     Properties:
       LogGroupName: Ptt-Alertor
       RetentionInDays: "400"
+  EcsExecutionRole:
+    Type: AWS::IAM::Role
+    Properties:
+      AssumeRolePolicyDocument:
+        Version: "2012-10-17"
+        Statement:
+          - Effect: Allow
+            Principal:
+              Service: ecs-tasks.amazonaws.com
+            Action:
+              - sts:AssumeRole
+      Path: "/"
+      ManagedPolicyArns:
+        - arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy
+        - arn:aws:iam::aws:policy/AmazonSSMReadOnlyAccess
+        - arn:aws:iam::aws:policy/AmazonS3ReadOnlyAccess
   EcsTaskRole:
     Type: AWS::IAM::Role
     Properties:
