:green_heart: add s3:GetObjectTagging on copy bucket policy for copy dynamodb backup

--- a/iam/iam.yaml
+++ b/iam/iam.yaml
@@ -15,6 +15,7 @@ Resources:
             Action:
               - s3:ListBucket
               - s3:GetObject
+              - s3:GetObjectTagging
             Resource:
               - arn:aws:s3:::ptt-alertor-2020-bucket
               - arn:aws:s3:::ptt-alertor-2020-bucket/*
