--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,10 +30,10 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: IAM
-        run:
+        run: |
           aws cloudformation deploy --stack-name IAM --template-file iam/iam.yaml \
-          --capabilities CAPABILITY_NAMED_IAM \
-          --parameter-overrides DefaultPassword=${DEFAULT_PASSWORD}
+            --capabilities CAPABILITY_NAMED_IAM \
+            --parameter-overrides DefaultPassword=${DEFAULT_PASSWORD}
         env:
           DEFAULT_PASSWORD: ${{ secrets.DEFAULT_PASSWORD }}
 
