:lock: enable es encrypt at rest

--- a/elasticsearch/elasticsearch.yaml
+++ b/elasticsearch/elasticsearch.yaml
@@ -24,6 +24,8 @@ Resources:
         ZoneAwarenessEnabled: false
       DomainEndpointOptions:
         EnforceHTTPS: true
+      EncryptionAtRestOptions:
+        Enabled: true
       NodeToNodeEncryptionOptions:
         Enabled: true
       AdvancedSecurityOptions:
